--- a/css/custom.css
+++ b/css/custom.css
@@ -6153,7 +6153,7 @@ h1 {
 .jumbotron {
   background-image: url("../assets/img/jumbotron_bg.jpg");
   background-size: cover;
-  background-position: fixed;
+  background-attachment: fixed;
   min-height: 400px; }
 
 .links {
@@ -6172,10 +6172,10 @@ h1 {
 .summary {
   padding-top: 50px; }
 
-.section-header {
+.section-header-center {
   text-align: center; }
 
-.section-header hr {
+.section-header-center hr {
   width: 33%;
   color: black;
   margin-bottom: 40px; }
@@ -6189,7 +6189,17 @@ h1 {
   margin-bottom: 50px; }
 
 .skills {
-  padding-top: 32px;
   margin-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 20px;
   background-color: #f7f7f7; }
+
+.section-header-left {
+  margin-bottom: 32px; }
+
+.projects {
+  background-image: url("../assets/img/projects_bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  padding-top: 32px;
+  padding-bottom: 32px; }
