--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -33,7 +33,7 @@ h1 {
 .jumbotron {
   background-image: url("../assets/img/jumbotron_bg.jpg");
   background-size: cover;
-  background-position: fixed;
+  background-attachment: fixed;
   min-height: $jumbotron-height;
 }
 
@@ -58,11 +58,11 @@ h1 {
   padding-top: 50px;
 }
 
-.section-header {
+.section-header-center {
   text-align: center;
 }
 
-.section-header hr {
+.section-header-center hr {
   width: 33%;
   color: black;
   margin-bottom: 40px;
@@ -79,9 +79,20 @@ h1 {
 }
 
 .skills {
-  padding-top: $section-separation;
   margin-top: $section-separation;
-  padding-bottom: $section-separation;
+  padding-top: $section-separation;
+  padding-bottom: 20px;
   background-color: #f7f7f7;
+}
 
+.section-header-left {
+  margin-bottom: $section-separation;
+}
+
+.projects {
+  background-image: url("../assets/img/projects_bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  padding-top: $section-separation;
+  padding-bottom: $section-separation;
 }
