--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -21,6 +21,10 @@ h1 {
   font-weight: 700;
 }
 
+a {
+  color: #1446A0;
+}
+
 .display-4 {
   color: white;
 }
@@ -95,4 +99,15 @@ h1 {
   background-attachment: fixed;
   padding-top: $section-separation;
   padding-bottom: $section-separation;
+}
+
+.experience {
+  margin-top: $section-separation;
+  padding-top: $section-separation;
+  padding-bottom: 20px;
+}
+
+.experience-lth {
+  margin-top: $section-separation;
+  text-align: right;
 }
