--- a/css/custom.css
+++ b/css/custom.css
@@ -6146,6 +6146,9 @@ h1 {
 a {
   color: #1446A0; }
 
+.card {
+  border: none; }
+
 .display-4 {
   color: white; }
 
@@ -6212,6 +6215,9 @@ a {
   padding-top: 32px;
   padding-bottom: 32px; }
 
+.projects .card-text {
+  min-height: 150px; }
+
 .experience {
   margin-top: 32px;
   padding-top: 32px;
@@ -6222,15 +6228,21 @@ a {
   text-align: right; }
 
 .education {
-  background-image: url("../assets/img/education_bg.jpg");
+  background-image: url("../assets/img/education_bg2.jpg");
   background-size: cover;
   background-attachment: fixed;
   margin-top: 32px;
   padding-top: 32px;
   padding-bottom: 200px; }
 
-.education h3, .education p {
+.education h3, .education p, .education li {
   color: white; }
+
+.education a {
+  color: #3498db; }
+
+.education-text {
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .section-header-right {
   margin-bottom: 32px;
