Added tooltips to links

--- a/css/custom.css
+++ b/css/custom.css
@@ -6166,7 +6166,7 @@ a {
   margin-top: 25px;
   text-align: center; }
 
-.links button {
+.links a {
   margin-left: 30px;
   margin-right: 30px; }
 
