--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -50,7 +50,7 @@ a {
   text-align: center;
 }
 
-.links button {
+.links a{
   margin-left: $link-button-spacing/2;
   margin-right: $link-button-spacing/2;
 }
