Added IA position to Experience section
Signed-off-by: Ryan Johnston <ryjo1026@gmail.com>

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -120,9 +120,13 @@ a {
   padding-bottom: $section-separation;
 }
 
-.experience-lth {
+.experience-section-right {
   margin-top: $section-separation;
   text-align: right;
+}
+
+.experience-section {
+  margin-top: $section-separation;
 }
 
 .education {
