--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -138,7 +138,7 @@ a {
   padding-bottom: 200px;
 }
 
-.education h3, .education p, , .education li{
+.education h3, .education p, .education li{
   color: white;
 }
 
