Finished up blog post pages

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -54,3 +54,12 @@ h6 {
 b {
     font-family: $family-body;
 }
+
+figcaption {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+article p {
+    margin-top: 1rem;
+}
